--- a/locadora-filmes.API/locadora-filmes.INFRA/locadora-filmes.INFRA.csproj
+++ b/locadora-filmes.API/locadora-filmes.INFRA/locadora-filmes.INFRA.csproj
@@ -5,4 +5,13 @@
     <RootNamespace>locadora_filmes.INFRA</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\locadora-filmes.DOMAIN\locadora-filmes.DOMAIN.csproj" />
+  </ItemGroup>
+
 </Project>
